--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "babel-node index.js",
+    "dev": "nodemon --exec babel-node index.js"
   },
   "author": "zaki",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/core": "^7.28.4",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@babel/node": "^7.28.0",
+    "@babel/preset-env": "^7.28.3",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10"
   }
 }
